--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<SeanBrown>Page Title</title>
+</head>
+<body>
 
+<h1>Sean Brown</h1>
+<p>I am a student at Virginia State University who is majoring in Computer Science.</p>
+
+</body>
+</html>
